RESOLVED FIXED61713
REGRESSION (r87622): In media documents, clicking the full screen button and the play button pauses the video
https://bugs.webkit.org/show_bug.cgi?id=61713
Summary REGRESSION (r87622): In media documents, clicking the full screen button and ...
Darin Adler
Reported 2011-05-29 16:36:58 PDT
REGRESSION (r87622): In media documents, clicking the full screen button and the play button pauses the video
Attachments
Patch (5.07 KB, patch)
2011-05-29 16:39 PDT, Darin Adler
kdecker: review+
Darin Adler
Comment 1 2011-05-29 16:39:00 PDT
Darin Adler
Comment 2 2011-05-29 16:39:28 PDT
Darin Adler
Comment 3 2011-05-29 17:00:39 PDT
Ademar Reis
Comment 4 2011-06-03 14:02:06 PDT
Revision r87655 cherry-picked into qtwebkit-2.2 with commit 5b51c40 <http://gitorious.org/webkit/qtwebkit/commit/5b51c40>
Note You need to log in before you can comment on or make changes to this bug.