third_party/WebKit/Source/WebCore/html/shadow/MediaControlElements.cpp
@@ -78,9 +78,10 @@ MediaControlElement::MediaControlElement(HTMLMediaElement* mediaElement)
 
 void* MediaControlElement::preDispatchEventHandler(Event* event)
 {
-    if (event->type() == eventNames().clickEvent)
+    if (event->type() == eventNames().clickEvent) {
+        event->preventDefault();
         event->stopPropagation();
-    
+    }
     return 0;
 }
 
@@ -334,6 +335,7 @@ void* MediaControlMuteButtonElement::preDispatchEventHandler(Event* event)
 {
     if (event->type() == eventNames().clickEvent) {
         mediaElement()->setMuted(!mediaElement()->muted());
+        event->preventDefault();
         event->stopPropagation();
     }
 
@@ -420,6 +422,7 @@ void* MediaControlPlayButtonElement::preDispatchEventHandler(Event* event)
     if (event->type() == eventNames().clickEvent) {
         mediaElement()->togglePlayState();
         updateDisplayType();
+        event->preventDefault();
         event->stopPropagation();
     }
     return 0;
@@ -455,6 +458,7 @@ void* MediaControlSeekButtonElement::preDispatchEventHandler(Event* event)
         }
         mediaElement()->pause(event->fromUserGesture());
         m_seekTimer.startRepeating(cSeekRepeatDelay);
+        event->preventDefault();
         event->stopPropagation();
     } else if (event->type() == eventNames().mouseupEvent) {
         if (m_capturing)
@@ -470,6 +474,7 @@ void* MediaControlSeekButtonElement::preDispatchEventHandler(Event* event)
             }
             m_seekTimer.stop();
             m_seeking = false;
+            event->preventDefault();
             event->stopPropagation();
         }
     }
@@ -551,6 +556,7 @@ void* MediaControlRewindButtonElement::preDispatchEventHandler(Event* event)
 {
     if (event->type() == eventNames().clickEvent) {
         mediaElement()->rewind(30);
+        event->preventDefault();
         event->stopPropagation();
     }    
     return 0;
@@ -581,6 +587,7 @@ void* MediaControlReturnToRealtimeButtonElement::preDispatchEventHandler(Event* 
 {
     if (event->type() == eventNames().clickEvent) {
         mediaElement()->returnToRealtime();
+        event->preventDefault();
         event->stopPropagation();
     }
     return 0;
@@ -613,6 +620,7 @@ void* MediaControlToggleClosedCaptionsButtonElement::preDispatchEventHandler(Eve
         mediaElement()->setClosedCaptionsVisible(!mediaElement()->closedCaptionsVisible());
         setChecked(mediaElement()->closedCaptionsVisible());
         updateDisplayType();
+        event->preventDefault();
         event->stopPropagation();
     }
 
@@ -811,6 +819,7 @@ void* MediaControlFullscreenButtonElement::preDispatchEventHandler(Event* event)
         } else
 #endif
             mediaElement()->enterFullscreen();
+        event->preventDefault();
         event->stopPropagation();
     }
     return 0;
@@ -841,6 +850,7 @@ void* MediaControlFullscreenVolumeMinButtonElement::preDispatchEventHandler(Even
     if (event->type() == eventNames().clickEvent) {
         ExceptionCode code = 0;
         mediaElement()->setVolume(0, code);
+        event->preventDefault();
         event->stopPropagation();
     }
     return 0;
@@ -871,6 +881,7 @@ void* MediaControlFullscreenVolumeMaxButtonElement::preDispatchEventHandler(Even
     if (event->type() == eventNames().clickEvent) {
         ExceptionCode code = 0;
         mediaElement()->setVolume(1, code);
+        event->preventDefault();
         event->stopPropagation();
     }
     return 0;
